rendered all pages dynamically with htmx

--- a/static/layouts/main.html
+++ b/static/layouts/main.html
@@ -68,7 +68,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="resume-2.html">
+                                                <a hx-get="/resume" hx-push-url="true">
                                                     <span>
                                                         <i class="fa-light fa-file-user"></i>
                                                     </span>
@@ -76,7 +76,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="portfolio-2.html">
+                                                <a hx-get="/portfolio" hx-push-url="true">
                                                     <span>
                                                         <i class="fa-light fa-briefcase"></i>
                                                     </span>
@@ -84,7 +84,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="blog-2.html">
+                                                <a hx-get="/blog" hx-push-url="true">
                                                     <span>
                                                         <i class="fa-light fa-newspaper"></i>
                                                     </span>
@@ -92,7 +92,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="contact-2.html">
+                                                <a hx-get="/contact" hx-push-url="true">
                                                     <span>
                                                         <i class="fa-light fa-address-book"></i>
                                                     </span>
