--- a/static/layouts/main.html
+++ b/static/layouts/main.html
@@ -13,14 +13,14 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/animate.min.css">
-    <link rel="stylesheet" href="/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/css/all.min.css">
-    <link rel="stylesheet" href="/css/odometer.min.css">
-    <link rel="stylesheet" href="/css/meanmenu.css">
-    <link rel="stylesheet" href="/css/swipper.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/animate.min.css">
+    <link rel="stylesheet" href="/static/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/static/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/odometer.min.css">
+    <link rel="stylesheet" href="/static/css/meanmenu.css">
+    <link rel="stylesheet" href="/static/css/swipper.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 
     <script src="https://unpkg.com/htmx.org@latest"></script>
 </head>
@@ -141,14 +141,14 @@
 </div>
 {{ end }}
 <!-- JS here -->
-<script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.bundle.min.js"></script>
-<script src="/js/swipper-bundle.min.js"></script>
-<script src="/js/jquery.meanmenu.min.js"></script>
-<script src="/js/wow.min.js"></script>
-<script src="/js/odometer.min.js"></script>
-<script src="/js/appear.min.js"></script>
-<script src="/js/main.js"></script>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/swipper-bundle.min.js"></script>
+<script src="/static/js/jquery.meanmenu.min.js"></script>
+<script src="/static/js/wow.min.js"></script>
+<script src="/static/js/odometer.min.js"></script>
+<script src="/static/js/appear.min.js"></script>
+<script src="/static/js/main.js"></script>
 </body>
 
 
